# AoC

./: Cargo.toml  README.md
src/: grid.rs  infra.rs  main.rs  util.rs
src/aoc2019/: day02.rs  day03.rs  day05.rs  intcode.rs  mod.rs
src/aoc2023/: day02.rs  day05.rs  day08.rs  day10.rs  day13.rs  day17.rs  day18.rs  day20.rs  day21.rs  day24.rs  day25.rs
src/aoc2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/aoc2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day09.rs  day10.rs  day11.rs  day12.rs  day14.rs  day15.rs  day16.rs  day18.rs  day19.rs
src/template/: mod.rs
src/template12/: mod.rs
src/template25/: mod.rs
