[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
#
#[[bin]]
#name="day1"
#src="day1.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
num = "0.4.1"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking"] }


