[package]
name = "aoc2023"
version = "0.1.0"
edition = "2024"
#
#[[bin]]
#name="day1"
#src="day1.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bevy_math = "0.12.1"
clap = { version = "4.4.11", features = ["derive"] }
num = "0.4.1"
priority-queue = "1.3.2"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking"] }
variadics_please = "1.1.0"


